                  (it's been deprecated for a while).
                - removed racersplit & racersmsg from conf. (it's been deprecated for a while)
                - added racersplit_postfix.
                - %T/%t now users racersplit* too.
		- fixed a bug re: sort_by_group - case should now no longer matter

v1.1.0 --> 1.1.0a : (r2414)
		- stats in announces were broken in v1.1.0, ``hotfix''.

v1.0.10 --> 1.1.0 : (r2412)
		- fixed a typo with complete_bar and chmod_completebar (tnx losty)
		- new dZSbot.conf option: ftpd_type. this should be set to "other" if you're
		  running something other than glftpd.
		- added improvements to !incompletes showing percent missing.
		- added feature to ng_free for using mountpoint along with device.
		- don't use the '$' cookie in the zipscript statusbars (fixed a segfault in
		  in case you do - thanx sked for the report)
		- fixed a bug with chmod_completebar.
		- added option for two sets of generic incomplete indicators.
		- compat-fix in the create_sfv routine - BSD extension was not supported on
		  all distros.
		- fix a bug with sample checks and exemption dirs.
		- default statdefault value changed to something valid. (note: statdefault is
		  index, not name, of section).
		- no longer says N/Ams if you disable ping-check of BNCs.
		- rescan of an mp3 release in a audio_nosort_dir should no longer result in a symlink.
		- IRC groupstats triggers changed for consistency (!gp*), see
		  http://bugs.pzs-ng.com/view.php?id=448 for details.
		- You can now have multiple completebars. In config, separate them by newline.
		- Privchannel invites now work correctly for users with multiple groups.
		- new option by request: show_users_in_group_dirs - option to not hide usernames.
                - pzs-ng should now work fine under wzdftpd and cuftpd. Use the following to configure:
                  ./configure --with-install-path=/path/to/install --disable-glftpd-specific

v1.0.9  --> 1.0.10 : (r2339)
		- psxc-imdb v2.8.