@@ -765,6 +765,13 @@ options:
             instead.
         default: false
 
+    audio_artist_noid3:
+        type: boolean
+        comment: |-
+            If you sort audio by artist ID3 tag will be used to get the first
+            char of the artist. If you would like to use the first char of the
+            release-name instead, set this to TRUE.
+
     audio_artist_path:
         type: path
         comment: |-
