@@ -92,9 +92,16 @@ if (subcomp(link_target, NULL)) {
 			memcpy(info->id3_artist, "VA", 3);
 		if (memcmp(info->id3_artist, "VA", 3)) {
 #if ( audio_artist_nosub == FALSE )
+#if ( audio_artist_noid3 == FALSE )
+
 			temp_p = ng_realloc(temp_p, 2, 1, 0, NULL, 1);
 			snprintf(temp_p, 2, "%c", toupper(*info->id3_artist));
 			createlink(audio_artist_path, temp_p, link_source, link_target);
+#else
+			temp_p = ng_realloc(temp_p, 2, 1, 0, NULL, 1);
+			snprintf(temp_p, 2, "%c", toupper(*link_target));
+			createlink(audio_artist_path, temp_p, link_source, link_target);
+#endif
 #else
 			temp_p = ng_realloc(temp_p, strlen(info->id3_artist)+1, 1, 0, NULL, 1);
 			snprintf(temp_p, strlen(info->id3_artist)+1, "%s", info->id3_artist);
