@@ -12,6 +12,7 @@ v1.1.0a --> 1.1.x :
                 - added racersplit_postfix.
                 - %T/%t now users racersplit* too.
 		- fixed a bug re: sort_by_group - case should now no longer matter
+		- added audio_artist_noid3 option to sort by releasename istf id3 info (by pp)
 
 v1.1.0 --> 1.1.0a : (r2414)
 		- stats in announces were broken in v1.1.0, ``hotfix''.
